--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,35 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px solid #ddd;
+}
+
+#authors img {
+  margin-top: -50px;
+}
+
+#authors .card:hover {
+  background: #3292a6;
+  color: #fff;
+}
+
+#authors .fab {
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  #showcase {
+    min-height: 500px;
+  }
+  #showcase h1 {
+    font-size: 4rem;
+  }
+  .mb-resp {
+    margin-bottom: 1rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
